Fixed a test, fixed gap between details, and fixed worsening advice showing after change postcode

--- a/NHS111/NHS111.Web.Frontend/src/styles/components/_overrides.scss
+++ b/NHS111/NHS111.Web.Frontend/src/styles/components/_overrides.scss
@@ -29,10 +29,6 @@ details > div {
   @include nhsuk-responsive-padding(4, 'top');
 }
 
-details + details {
-  @include nhsuk-responsive-margin(3, 'top', 'true');
-}
-
 
 /* Some specificity hacks are required so nhsuk doesn't override existing classes */
 
